# MIDI_LLM

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  tok_utils.py
Allema/: Generated_Track_Allema_4000_REMI.mid  Generated_Track_Allema_4000_Structured.mid  Generated_Track_Allema_4000_TSD.mid
Couran/: Generated_Track_Couran_4000_Structured.mid  Generated_Track_Couran_4000_TSD.mid
DifferentTokenMappings/: Generated_Track_15000_REMI.mid  Generated_Track_15000_Structured.mid  Generated_Track_15000_TSD.mid  Generated_Track_20000_REMI.mid  Generated_Track_20000_Structured.mid  Generated_Track_20000_TSD.mid  Generated_Track_2000_REMI.mid  Generated_Track_2000_Structured.mid  Generated_Track_2000_TSD.mid  Generated_Track_3000_REMI.mid  Generated_Track_3000_Structured.mid  Generated_Track_3000_TSD.mid  Generated_Track_5000_REMI.mid  Generated_Track_5000_Structured.mid  Generated_Track_5000_TSD.mid
Gigue With Rests/: Generated_Track_Gigue_4000_REMI.mid  Generated_Track_Gigue_4000_Structured.mid  Generated_Track_Gigue_4000_TSD.mid
Gigue Without Rests/: Generated_Track_Gigue_No_Rest_4000_REMI.mid  Generated_Track_Gigue_No_Rest_4000_TSD.mid
Minuet/: Generated_Track_4000_REMI.mid  Generated_Track_4000_Structured.mid  Generated_Track_4000_TSD.mid
midi_llm/: __init__.py  inference.py  midi_dataset.py  midi_datasets.py  midi_downloader.py  midi_player.py  tok_utils.py
test_scripts/: hf_llama_endpoint_hfhub.py
test_scripts/dataset/: find_midi.py  midi_tok.py
test_scripts/detokenize/: test_detokenize.py  test_listen.ipynb
(+2 files in other folders)
